--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react-dom": "^19.2.4",
     "react-router-dom": "7.1.0",
     "@google/genai": "1.3.0",
-    "lucide-react": "0.460.0"
+    "lucide-react": "0.460.0",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.3.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
